--- a/TexturesXMLExporter/TexturesXMLExporter/TexturesXMLExporter.vcxproj
+++ b/TexturesXMLExporter/TexturesXMLExporter/TexturesXMLExporter.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="exporter.cpp" />
     <ClCompile Include="folder.cpp" />
+    <ClCompile Include="ixmlexpressed.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
     <ClCompile Include="mapType.cpp" />
@@ -104,6 +105,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>C:\Boost\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
