Minor refactoring. Initial implementation of saving logs (WIP).

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ TexturesXMLExporter/TexturesXMLExporter.opensdf
 TexturesXMLExporter/TexturesXMLExporter/textures.xml
 TexturesXMLExporter/TexturesXMLExporter/Textures/
 TexturesXMLExporter/TexturesXMLExporter/exp_thumbs/
+TexturesXMLExporter/TexturesXMLExporter/log.txt
