--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ TexturesXMLExporter/TexturesXMLExporter.opensdf
 TexturesXMLExporter/TexturesXMLExporter/textures.xml
 TexturesXMLExporter/TexturesXMLExporter/Textures/
 TexturesXMLExporter/TexturesXMLExporter/exp_thumbs/
-TexturesXMLExporter/TexturesXMLExporter/log.txt
+TexturesXMLExporter/TexturesXMLExporter/log*.txt
